@@ -33,7 +33,6 @@ setup(name='memphis.form',
                           'chameleon',
                           'memphis.view',
                           'memphis.config',
-                          'zope.schema',
                           'zope.component',
                           'zope.interface',
                           ],
